--- a/templates/app.yaml
+++ b/templates/app.yaml
@@ -1,8 +1,7 @@
-application: blog
-version: 1
 runtime: python27
 api_version: 1
 threadsafe: true
+entrypoint: python blog.py
 
 handlers:
 - url: /stylesheets 
